# lsar-GUI

./: .gitignore  LICENSE  README.md  biome.json  package.json  vite.config.ts
.github/workflows/: cleanup-cache.yml  nightly.yml  pr-check.yml  publish.yml
.scripts/: mirror-latest-json.js
docs/images/: dark.avif  light.avif
src/: App.css.ts  App.tsx  index.css.ts  index.tsx  lazy.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  platform.rs  setup.rs  tracker.rs  windows.rs
src-tauri/src/data/: db.rs
src-tauri/src/network/: http.rs
src-tauri/src/parser/: http_client.rs  mod.rs
src-tauri/src/parser/bigo/: mod.rs
src-tauri/src/parsers/: mod.rs
src-tauri/src/parsers/bigo/: mod.rs
src-tauri/src/parsers/bilibili/: bilibili_parser.rs  html_fetcher.rs  room_info_fetcher.rs  room_play_info_fetcher.rs
src-tauri/src/parsers/douyin/: a_bogus.rs  mod.rs  models.rs  ms_token.rs  utils.rs
src-tauri/src/parsers/douyu/: constants.rs  encryption_fetcher.rs  mod.rs  models.rs  room_info_fetcher.rs  room_page_fetcher.rs  signature_generator.rs  stream_info_parser.rs
src-tauri/src/parsers/huya/: mod.rs  uuid.rs
src-tauri/src/utils/: md5.rs  mod.rs  time.rs
src/commands/: window.ts
src/commands/parser/: bigo.ts  bili.ts  douyin.ts  douyu.ts  huya.ts  index.ts
src/components/Flex/: Flex.css.ts  Flex.tsx
src/components/about/: About.css.ts  index.tsx
src/components/drawer/: Drawer.css.ts  Drawer.tsx  Drawer.types.ts
src/components/history/: index.css.ts  index.tsx
src/components/history/Item/: index.css.ts  index.tsx
src/components/message-bar/: index.css.ts  index.tsx
src/components/result/: index.css.ts  index.tsx
src/components/result/Links/: index.css.ts  index.tsx
src/components/search/: index.css.ts  index.tsx
src/components/settings/: index.css.ts  index.tsx  utils.ts
src/components/settings/components/BiliCookie/: index.tsx
src/components/settings/components/DarkMode/: index.css.ts  index.tsx
src/components/settings/components/PlayerPath/: index.tsx
src/components/settings/components/SettingItem/: index.css.ts  index.tsx
src/components/title-bar/: index.css.ts  index.tsx
src/contexts/: AppContext.tsx  ConfigContext.tsx  HistoryContext.tsx  ParsedResultContext.tsx  ParsingContext.tsx  SettingsContext.tsx
src/hooks/: useDarkMode.ts
src/parser/: index.ts  utils.ts
src/parser/bigo/: index.ts
src/parser/bilibili/: index.ts
src/parser/douyin/: index.ts
src/parser/douyu/: index.ts
src/parser/huya/: index.ts
types/: index.d.ts
