[package]
name = "lsar"
version = "0.1.0"
description = "直播解析工具"
authors = ["thep0y"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = [
  "macos-private-api",
  "wry",
] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["macros"] }
time = { version = "0", default-features = false, features = [
  'macros',
  'serde',
] }
tracing = { version = "0", default-features = false, features = [
  "log",
  "release_max_level_info",
] }
tracing-subscriber = { version = "0", default-features = false, features = [
  "fmt",
  'time',
  'env-filter',
  'json',
] }
thiserror = "2"
sqlx = { version = "0", default-features = false, features = [
  "macros",
  "runtime-tokio",
  "sqlite",
  "time",
] }
dirs = "6"
md-5 = "0"
reqwest = { version = "0", default-features = false, features = [
  "json",
  "gzip",
  "http2",
  "rustls-tls",
] }
toml = "0"
open = "5"
os_info = { version = "3", default-features = false }
regex = { version = "1", default-features = false }
url = "2"
rand = { version = "0", default-features = false, features = [
  "std",
  # "std_rng",
  "thread_rng",
] }
base64 = "0"
bytes = "1"
# sm3 = "0.4.2" # 抖音 a_bogus 需要

tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3"
tauri-plugin-updater = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_System_Registry",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_ProcessStatus",
  "Win32_Graphics_Dwm",
  "Wdk_System_SystemServices",
  "Win32_System_SystemInformation",
  "Win32_Globalization",
  "Win32_System_Threading",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
